The new_short_array method in the SPVM::ExchangeAPI throw an exception when the element is a reference and etc.
  [Incompatible Changes]
    * The new_short_array method in the SPVM::ExchangeAPI throw an exception when the element is a reference.
    * The new_short_array_unsigned in the SPVM::ExchangeAPI throw an exception when the element is a reference.
    * The new_short_array_from_bin in the SPVM::ExchangeAPI throw an exception when the element is a reference.
    * The new_short_array_from_bin in the SPVM::ExchangeAPI throw an exception when the binary is not divisible by 2.
    * The new_short_array_from_bin in the SPVM::ExchangeAPI throw an exception when the array is undef.

--- a/Changes
+++ b/Changes
@@ -58,6 +58,11 @@
     * Removed the new_string_from_bin method in the SPVM::Exchange::API.
     * The new_byte_array method in the SPVM::ExchangeAPI throw an exception when the element is a reference.
     * The new_byte_array_unsigned in the SPVM::ExchangeAPI throw an exception when the element is a reference.
+    * The new_short_array method in the SPVM::ExchangeAPI throw an exception when the element is a reference.
+    * The new_short_array_unsigned in the SPVM::ExchangeAPI throw an exception when the element is a reference.
+    * The new_short_array_from_bin in the SPVM::ExchangeAPI throw an exception when the element is a reference.
+    * The new_short_array_from_bin in the SPVM::ExchangeAPI throw an exception when the binary is not divisible by 2.
+    * The new_short_array_from_bin in the SPVM::ExchangeAPI throw an exception when the array is undef.
   [Bug Fix]
     * Fixed the bugs that exchange API call_method can't receive string number such as "8" if the type is numeric.
     * Fixed the bugs that exchange API call_method can't receive string number such as "8" if the type is numeric reference.
