--- a/Changes
+++ b/Changes
@@ -73,6 +73,9 @@
     * The new_float_array method in the SPVM::ExchangeAPI throw an exception when the element is a reference.
     * The new_float_array_from_bin in the SPVM::ExchangeAPI throw an exception when the binary is not divisible by 4.
     * The new_float_array_from_bin in the SPVM::ExchangeAPI throw an exception when the array is undef.
+    * The new_double_array method in the SPVM::ExchangeAPI throw an exception when the element is a reference.
+    * The new_double_array_from_bin in the SPVM::ExchangeAPI throw an exception when the binary is not divisible by 4.
+    * The new_double_array_from_bin in the SPVM::ExchangeAPI throw an exception when the array is undef.
   [Bug Fix]
     * Fixed the bugs that exchange API call_method can't receive string number such as "8" if the type is numeric.
     * Fixed the bugs that exchange API call_method can't receive string number such as "8" if the type is numeric reference.
