--- a/Changes
+++ b/Changes
@@ -30,7 +30,16 @@
 
       -  void* (*new_muldim_array_raw)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t basic_type_id, int32_t element_dimension, int32_t length);
       +  void* (*new_muldim_array_raw)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t basic_type_id, int32_t type_dimension, int32_t length);
-
+  [Document Improvement]
+    * Improved the doc of the SPVM::BlessedObject::String.
+    * Improved the doc of the SPVM::BlessedObject::Class.
+  [Test Improvement]
+    * Improved the tests of the SPVM::BlessedObject::String.
+    * Improved the tests of the SPVM::BlessedObject::Class.
+  [Exception Message Improvement]
+    * Improved the exception messages of the SPVM::BlessedObject::String.
+    * Improved the exception messages of the SPVM::BlessedObject::Class.
+    
 0.9696 2023-03-22
   [New Features]
     * Added the dump method in the SPVM::ExchangeAPI class.
