--- a/Changes
+++ b/Changes
@@ -30,6 +30,9 @@
 
       -  void* (*new_muldim_array_raw)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t basic_type_id, int32_t element_dimension, int32_t length);
       +  void* (*new_muldim_array_raw)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t basic_type_id, int32_t type_dimension, int32_t length);
+    * Removed the undocumented string_object_to_string and string_object_to_bin in the SPVM::ExchangeAPI method
+      and added a private _xs_to_bin method to SPVM::BlessedObject::String.
+    
   [Document Improvement]
     * Improved the doc of the SPVM::BlessedObject::String.
     * Improved the doc of the SPVM::BlessedObject::Class.
