--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9698 2023-03-28
+  [Document Fix]
+    * Fixed the doc of the call_method in the SPVM::ExchangeAPI class.
 0.9697 2023-03-23
   [New Features]
     * Added the following Native APIs.
