--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
     
       my $ret = $api->call_method($invocant, $method_name, @args, $error);
     * Added the new_object_array_len method in the SPVM::ExchangeAPI.
+    * Added the new_string_array_len method in the SPVM::ExchangeAPI.
     
   [Document Fix]
     * Fixed and improved the doc of the call_method in the SPVM::ExchangeAPI class.
