--- a/Changes
+++ b/Changes
@@ -20,6 +20,8 @@
     * Added the doc of the new_long_array_unsigned method in the ExchangeAPI class.
   [Incompatible Changes]
     * Don't support multi-dimensional array creation in the new_object_array method in the SPVM::ExchangeAPI class. Use the new_muldim_array method instead.
+  [Bug Fix]
+    * Fixed the bug that the new_object_array and new_object_array_raw Native API can recieve non object array type.
 0.9697 2023-03-23
   [New Features]
     * Added the following Native APIs.
