Added the is_object_type Runtime Native API.
  [New Features]
    * Added the is_object_type Runtime Native API.

--- a/Changes
+++ b/Changes
@@ -12,6 +12,7 @@
     * Added the new_any_mulnum_array_len method in the SPVM::ExchangeAPI.
     * Added the new_any_muldim_array_len method in the SPVM::ExchangeAPI.
     * Added the __get_type_name method in the SPVM::ExchangeAPI.
+    * Added the is_object_type Runtime Native API.
   [Document Fix]
     * Fixed and improved the doc of the call_method in the SPVM::ExchangeAPI class.
     * Added the doc of the new_byte_array_unsigned method in the ExchangeAPI class.
