Fixed the bug that return value conversion of any object type retrun a SPVM::BlessedObject::Class object, not SPVM::BlessedObject::String when the object is a string.
  [Bug Fix]
    * Fixed the bug that return value conversion of any object type retrun a SPVM::BlessedObject::Class object, not SPVM::BlessedObject::String when the object is a string.

--- a/Changes
+++ b/Changes
@@ -26,6 +26,7 @@
     * Fixed the bug that the new_mulnum_array in the Exchange API can recieve non multi-numeric array type.
     * Fixed the bug that the new_mulnum_array_len in the Exchange API can recieve non multi-numeric array type.
     * Fixed the bug that the new_mulnum_array_from_bin in the Exchange API can recieve non multi-numeric array type.
+    * Fixed the bug that return value conversion of any object type retrun a SPVM::BlessedObject::Class object, not SPVM::BlessedObject::String when the object is a string.
 0.9697 2023-03-23
   [New Features]
     * Added the following Native APIs.
