Renamed native_include_dir to get_native_include_dir Renamed native_src_dir to get_native_src_dir

--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 0.9705 2023-04-09
   [New Features]
-    * Added the native_include_dir method in the SPVM::Builder::Config class.
-    * Added the native_src_dir method in the SPVM::Builder::Config class.
+    * Added the get_native_include_dir method in the SPVM::Builder::Config class.
+    * Added the get_native_src_dir method in the SPVM::Builder::Config class.
     
   [Incompatible Canges]
     * Removed the builder_include_dir field in the SPVM::Builder::Config.
