--- a/Changes
+++ b/Changes
@@ -2,7 +2,9 @@
   [New Features]
     * Added the get_native_include_dir method in the SPVM::Builder::Config class.
     * Added the get_native_src_dir method in the SPVM::Builder::Config class.
-    
+    * Added the load_config in the SPVM::Builder::Config class.
+    * Added the load_base_config in the SPVM::Builder::Config class.
+    * Added the load_mode_config in the SPVM::Builder::Config class.
   [Incompatible Canges]
     * Removed the builder_include_dir field in the SPVM::Builder::Config.
     * Removed the builder_src_dir field in the SPVM::Builder::Config.
