--- a/Changes
+++ b/Changes
@@ -6,6 +6,9 @@
     * Added the load_config in the SPVM::Builder::Config class.
     * Added the load_base_config in the SPVM::Builder::Config class.
     * Added the load_mode_config in the SPVM::Builder::Config class.
+    * Added the before_compile_cbs fields in the SPVM::Builder::Config class.
+    * Added the before_each_compile_cbs fields in the SPVM::Builder::Config::Exe class.
+    * Added the before_link_cbs fields in the SPVM::Builder::Config class.
   [Incompatible Canges]
     * Removed the builder_include_dir field in the SPVM::Builder::Config.
     * Removed the builder_src_dir field in the SPVM::Builder::Config.
