--- a/Changes
+++ b/Changes
@@ -9,6 +9,7 @@
     * Added the before_compile_cbs fields in the SPVM::Builder::Config class.
     * Added the before_each_compile_cbs fields in the SPVM::Builder::Config::Exe class.
     * Added the before_link_cbs fields in the SPVM::Builder::Config class.
+    * Added the clone method in the SPVM::Builder::Config class.
   [Incompatible Canges]
     * Removed the builder_include_dir field in the SPVM::Builder::Config.
     * Removed the builder_src_dir field in the SPVM::Builder::Config.
