Added the config_bootstrap field in the SPVM::Builder::Config::Exe class and etc.
  [New Features]
    * Added the config_bootstrap field in the SPVM::Builder::Config::Exe class.
    * Added the config_spvm_core field in the SPVM::Builder::Config::Exe class.

--- a/Changes
+++ b/Changes
@@ -10,6 +10,8 @@
     * Added the before_each_compile_cbs fields in the SPVM::Builder::Config::Exe class.
     * Added the before_link_cbs fields in the SPVM::Builder::Config class.
     * Added the clone method in the SPVM::Builder::Config class.
+    * Added the config_bootstrap field in the SPVM::Builder::Config::Exe class.
+    * Added the config_spvm_core field in the SPVM::Builder::Config::Exe class.
   [Incompatible Canges]
     * Removed the builder_include_dir field in the SPVM::Builder::Config.
     * Removed the builder_src_dir field in the SPVM::Builder::Config.
